# cataloger

./: .env.example  .gitignore  LICENSE  Procfile  README.md  isbn-catalog-tool-plan.md  pyproject.toml  railway.json
src/cataloger/core/: cache.py  catalog.py  fetcher.py  images.py  models.py
src/cataloger/web/: app.py
src/cataloger/web/static/: app.js  index.html  style.css
